--- a/src/view/css/styleTela2.css
+++ b/src/view/css/styleTela2.css
@@ -1,10 +1,20 @@
 @import url('stylesheetGeral.css');
 
 /* Background */
+@media (max-height: 929px) {
+    html,
+    body {
+        height: 929px;
+        margin: 0;
+    }
+}
 
-html, body {
-    height: 100%;
-    margin: 0;
+@media (min-height: 929px) {
+    html,
+    body {
+        height: 100%;
+        margin: 0;
+    }
 }
 
 .row {
@@ -22,10 +32,6 @@ html, body {
 
 p {
     color: var(--neutral5);
-}
-
-.fonte-relogio {
-    font-size: 10rem;
 }
 
 /* Botão */
