--- a/src/view/css/styleTela3.css
+++ b/src/view/css/styleTela3.css
@@ -1,61 +1,103 @@
-/* Estilo para a tela 3*/
-body{
-    background-color: #f3b3a9;
+@import url('stylesheetGeral.css');
+
+/* Background */
+@media (max-height: 929px) {
+    html,
+    body {
+        height: 929px;
+        margin: 0;
+    }
 }
 
-h1{
-    font-family:  'Times New Roman', Times, serif;
-    font-size: 40px;
-    color: #000000;
-    text-align: top left;
-    margin-top: 30px;
-    padding: 40px; 
+@media (min-height: 929px) {
+    html,
+    body {
+        height: 100%;
+        margin: 0;
+    }
 }
 
-.new-alarm{
-    position: fixed; 
-    top: 0;
-    right: 0;
-    padding: 40px; 
-   
+.row {
+    margin-left: 0;
+    margin-right: 0;
 }
 
-.clock-icon {
-    width: 50px; 
-    height: auto;    
-    display: block;  
-    margin: 0 auto;  
-    padding: 40px; 
-}
-
-.clock-icon:hover {
-    cursor: pointer;  
-    opacity: 0.8;    
-}
-
-.relative-container {
-    position: relative; 
-}
-
-.clock-icon {
-    position: fixed;
-    right: 10px;   
-    width: 50px;
-    bottom: 50px;
-    height: auto;
-}
-
-.body-background {
-    position: fixed;
-    right: 65%; 
-    bottom: -20%; 
-    width: 70vw; 
-    height: 80vh; 
-    background-image: url('../assts/time_icon.png'); 
-    background-position:  bottom right; 
+.background {
+    background-color: #ffdeba;
+    background-image: url('../assts/time_icon.png');
+    background-size: 25%;
     background-repeat: no-repeat;
-    background-size: auto 80vh; 
-    z-index: -1;
-    overflow: hidden; 
+    background-position: left bottom;
 }
 
+.new-alarm {
+    color: var(--sunrise5);
+}
+
+p {
+    color: var(--neutral5);
+}
+
+.card1 {
+    width: 300px;
+    height: 110px;
+    background-color: #ffdab3;
+    border-radius: 10px;
+    padding: 1%;
+    margin-bottom: 3%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+}
+
+.custom-checkbox {
+    position: relative;
+    cursor: pointer;
+}
+
+.custom-checkbox:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 30px;
+    height: 30px;
+    border: 2px solid var(--neutral5);
+    background-color: var(--neutral2);
+    box-sizing: border-box;
+}
+
+.custom-checkbox:after {
+    content: '';
+    position: absolute;
+    left: 70%;
+    top: -70%;
+    width: 17px;
+    height: 30px;
+    border: solid var(--sunrise5);
+    border-width: 0 4px 4px 0;
+    transform: rotate(50deg);
+    visibility: hidden;
+}
+
+.custom-checkbox:checked:before {
+    background-color: var(--neutral2);
+    border-color: var(--neutral5);
+}
+
+.custom-checkbox:checked:after {
+    visibility: visible;
+}
+
+.checkbox-margin {
+    margin-top: 40%;
+}
+
+.horario-timer {
+    font-size: 2rem;
+}
+
+.relogio {
+    position: absolute;
+    left: 80%;
+    top: 85%
+}
