--- a/src/view/html/alarmTela3.html
+++ b/src/view/html/alarmTela3.html
@@ -4,20 +4,76 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tela 3</title>
-    <link rel="stylesheet" type="text/css" href="../css/styleTela3.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/despertador.png">
+    <link rel="stylesheet" type="text/css" href="../css/styleTela3.css" media="screen" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Alarm</h1>
-    <div class="body-background">
-        <div class="clock-container">
-            <a href="index.html"> <!-- caminho para tela principal -->
-                <img src="../assts/time_icon.png" alt="Clock Icon" class="clock-icon" />
-            </a>
+    <div class="container-fluid h-100 background">
+        <div class="container custom-container pt-4 px-0">
+            <div class="row">
+                <div class="col d-flex align-items-start">
+                    <p class="fs-1 mb-0">Alarm</p>
+                </div>
+
+                <div class="col d-flex align-items-end justify-content-end">
+                    <p class="fs-4 new-alarm mb-0 mt-5">new alarm</p>
+                </div>
+            </div>
+        </div>
+        <div class="container custom-container px-0">
+            <div class="card1 mb-3">
+                <div class="row">
+                    <div class="col-2">
+                        <input type="checkbox" id="customCheckbox" class="custom-checkbox checkbox-margin">
+                    </div>
+                    <div class="col">
+                        <p class="horario-timer d-flex justify-content-start mb-0">12:30 pm</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <p class="p2-margin d-flex justify-content-start ms-1">Lunch with the new costumers</p>
+                </div>
+            </div>
+        </div>
+        <div class="container custom-container px-0">
+            <div class="card1 mb-3">
+                <div class="row">
+                    <div class="col-2">
+                        <input type="checkbox" id="customCheckbox" class="custom-checkbox checkbox-margin">
+                    </div>
+                    <div class="col">
+                        <p class="horario-timer d-flex justify-content-start mb-0">2:00 pm</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <p class="p2-margin d-flex justify-content-start ms-1">Meeting in the office</p>
+                </div>
+            </div>
+        </div>
+        <div class="container custom-container px-0">
+            <div class="card1 mb-3">
+                <div class="row">
+                    <div class="col-2">
+                        <input type="checkbox" id="customCheckbox" class="custom-checkbox checkbox-margin">
+                    </div>
+                    <div class="col">
+                        <p class="horario-timer d-flex justify-content-start mb-0">5:00 pm</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <p class="p2-margin d-flex justify-content-start ms-1">Happy hour</p>
+                </div>
+            </div>
+        </div>
+        <div>
+            <img src="../assts/time_icon_sm.png" alt="Config" width="100px" height="100px" class="relogio">
         </div>
 
-        <a href="" class="new-alarm" onclick="redirectToNewAlarm()">New Alarm</a>
     </div>
 </body>
 
