--- a/src/view/css/styleTela4.css
+++ b/src/view/css/styleTela4.css
@@ -1,95 +1,143 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f8f0e3;
-  
+@import url('stylesheetGeral.css');
+
+/* Background */
+@media (max-height: 929px) {
+    html,
+    body {
+        height: 929px;
+        margin: 0;
+    }
 }
 
-.container {
-    text-align: center;
-    margin-top: 50px;
+@media (min-height: 929px) {
+    html,
+    body {
+        height: 100%;
+        margin: 0;
+    }
 }
 
-.title {
-    color: #333;
-    text-align: left;
-    margin-bottom: 20px;
-    padding: 10%;
-    margin: 20px 0px; 
-    padding: 0 10%; 
+.row {
+    margin-left: 0;
+    margin-right: 0;
 }
 
-.form-group,
-.input-clock,
-.input-field {
-    margin-bottom: 10px;
-    font-size: 20px;
-    border-radius: 15px; 
-    border: none; 
-    padding: 15px; 
-
-}
-.input-field{
-    width: 40%;
-    height: 40px;
-   
-
-}
-.am-pm-selector{
-   display: inline;
-    font-size: 20px;
-    border: none; 
-    padding: 15px; 
-
-}
-
-
-.input-field{
-    width: -30%;
-}
-
-.clock-icon {
-    position: fixed;
-    left: 10px;
-    bottom: 10px;
-    width: 50px;
-    height: auto;
-    z-index: 10;
-}
-
-.clock-icon:hover {
-    cursor: pointer;
-    opacity: 0.8;
-}
-
-.button,
-.save-button{
-    font-size: 20px;
-    color:white;
-    margin-bottom: 20px;
-    background-color: #565353;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5); 
-    border-radius: 5px;
-    padding: 10px 20px;
-    width: 10%;
-    width: auto; 
-
-}
-.button:hover{
-    cursor: pointer;
-    opacity: 0.8;
-    background-color: #565353;
-}
-
-.inverted-background-image {
-    display: flex;
-    position: fixed;
+.background {
+    background-color: #ffdeba;
     background-image: url('../assts/34257_calendar_icon.png');
-    background-size: auto 80vh; 
+    background-size: 28%;
     background-repeat: no-repeat;
-    background-position: bottom left;
-    transform: scaleY(1) rotate(-47deg);
-    left: 50%; 
-    bottom: -20%; 
-    width: 70vw; 
-    height: 100vh; 
+    background-position: right bottom;
 }
+
+p {
+    color: var(--neutral5);
+}
+
+.font-time {
+    font-size: 2rem;
+}
+
+.margin-timeset {
+    margin-top: -1.6%;
+    margin-left: 1%;
+}
+
+/* Input type text */
+.input1 {
+    width: 100%;
+    padding: 17px;
+    border: 2px solid var(--neutral1);
+    border-radius: 4px;
+    transition: box-shadow 0.3s; /* Adiciona uma transição suave*/
+}
+
+/* Sombra roxa quando o input é focado */
+.input1:focus {
+    box-shadow: 0 0 8px var(--sunrise5);
+    outline: none;
+}
+
+.input1 {
+    margin-left: 8px;
+    font-size: 1rem;
+}
+
+.input2 {
+    width: 310px;
+    padding: 8px;
+    border: 2px solid var(--neutral1);
+    border-radius: 4px;
+    transition: box-shadow 0.3s;
+}
+
+.input2:focus {
+    box-shadow: 0 0 8px var(--sunrise5);
+    outline: none;
+}
+
+.input2 {
+    margin-left: 8px;
+    font-size: 1rem;
+}
+
+/* Input type radio */
+input[type="radio"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 2px solid var(--neutral5);
+    outline: none;
+    cursor: pointer;
+    position: relative;
+}
+
+/* Ponto interno */
+input[type="radio"]:checked::before {
+    content: "";
+    width: 80%;
+    height: 80%;
+    background-color: var(--sunrise5);
+    border-radius: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: block;
+}
+
+/* Botão */
+.button {
+    display: inline-block;
+    font-size: 16px;
+    text-align: center;
+    cursor: pointer;
+    border: 2px solid var(--neutral1); /* Cor da borda do botão */
+    color: var(--neutral1); /* Cor do texto do botão */
+    background-color: var(--neutral4); /* Cor de fundo do botão */
+    border-radius: 4px; /* Raio das bordas do botão */
+    transition: box-shadow 0.3s, color 0.3s; /* Adiciona uma transição suave ao hover */
+    margin: 0 auto;
+    padding: 7px 30px;
+}
+
+
+/* Hover */
+.button:hover {
+    box-shadow: 0px 0px 10px 5px var(--neutral3);
+}
+
+.relogio {
+    position: absolute;
+    left: 0%;
+    top: 85%
+}
+
+.margin {
+    display: grid;
+    place-items: center;
+}
+
