--- a/src/view/html/alarmTela2.html
+++ b/src/view/html/alarmTela2.html
@@ -57,7 +57,7 @@
             <div class="card2 mb-3">
                 <div class="row">
                     <div class="col">
-                        <input type="text" name="nmCity" id="idCity" placeholder="City" class="">
+                        <input type="text" name="nmCity" id="idCity" placeholder="City">
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="row  mb-4">
                     <div class="col">
-                        <input type="text" name="nmName" id="idName" placeholder="Name" class="">
+                        <input type="text" name="nmName" id="idName" placeholder="Name">
                     </div>
                 </div>
             </div>
