--- a/src/view/html/alarmTela4.html
+++ b/src/view/html/alarmTela4.html
@@ -1,39 +1,76 @@
+<!-- Estrutura HTML -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
-    <title>New Alarm</title>
-    <link rel="stylesheet" type="text/css" href="../css/styleTela4.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/despertador.png">
+    <link rel="stylesheet" type="text/css" href="../css/styleTela4.css" media="screen" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-
-    <div class="container">
-        <h1 class="title">New Alarm</h1>
-
-        <div class="form-group">
-            <label for="time" class="title-time">Time</label>
-            <input type="time" id="time" class="input-clock">
-            <div class="am-pm-selector">
-                <input type="radio" id="am" name="am-pm" value="AM" checked>
-                <label for="am">am</label>
-                <input type="radio" id="pm" name="am-pm" value="PM">
-                <label for="pm">pm</label>
+    <div class="container-fluid h-100 background">
+        <div class="container custom-container pt-4 px-0">
+            <div class="row">
+                <div class="col d-flex align-items-start">
+                    <p class="fs-1 mb-0">New Alarm</p>
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            <input type="text" id="description" class="input-field" placeholder="Description">
+        <div class="container custom-container px-0 margin mt-5">
+            <div class="mb-3">
+                <div class="row">
+                    <div class="col">
+                        <p class="font-time mb-0">Time</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-8">
+                        <input type="time" class="input1">
+                    </div>
+                    <div class="col">
+                        <div class="row">
+                            <div class="col d-flex">
+                                <div>
+                                    <input type="radio" id="idTimeSetAm" name="nmTimeSet" checked>
+                                </div>
+                                <div class="margin-timeset">
+                                    <label for="idTimeSetAm" class="font-time">am</label>
+                                </div>                              
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col d-flex">
+                                <div>
+                                    <input type="radio" id="idTimeSetPm" name="nmTimeSet">
+                                </div>
+                                <div class="margin-timeset">
+                                    <label for="idTimeSetPm" class="font-time">pm</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col mt-3">
+                        <input type="text" class="input2" placeholder="Description">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4 d-flex justify-content-end ms-5 mt-3">
+                        <button class="button fs-4">Save</button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <button class="save-button">Save</button>
+        <div>
+            <img src="../assts/time_icon_sm.png" alt="Config" width="100px" height="100px" class="relogio">
+        </div>
     </div>
-
-    <a href="index.html"> <!-- caminho para tela principal -->
-        <img src="../assts/time_icon.png" alt="Clock Icon" class="clock-icon" />
-    </a>
-    <div class="inverted-background-image"></div>
-
 </body>
 
 </html>
