:test_tube:test: feito test dos endpoints hora certa e hoje

--- a/src/view/html/alarmTela1.html
+++ b/src/view/html/alarmTela1.html
@@ -13,9 +13,9 @@
         <div class="container custom-container pt-4 px-0">
             <div class="row">
                 <div class="col">
-                    <p class="m-0">Min: 20</p>
-                    <p class="m-0">Max: 30</p>
-                    <p class="m-0">Now: 23</p>
+                    <p class="m-0 min-temp"></p>
+                    <p class="m-0 max-temp"></p>
+                    <p class="m-0 current-temp"></p>
                 </div>
                 <div class="col-6">
                 </div>
@@ -62,4 +62,5 @@
         </div>
     </div>
 </body>
+</script>
 </html>
