--- a/src/view/html/alarmTela1.html
+++ b/src/view/html/alarmTela1.html
@@ -13,17 +13,14 @@
         <div class="container custom-container pt-4 px-0">
             <div class="row">
                 <div class="col">
-<<<<<<< HEAD
                     <p class="m-0 min-temp"></p>
                     <p class="m-0 max-temp"></p>
                     <p class="m-0 current-temp"></p>
-=======
                     <p class="m-0 font-size2">Now: 23°C</p>
                     <div class="d-flex">
                         <p class="m-0 pe-3 ps-2">Min: 20°C</p>
                         <p class="m-0">Max: 30°C</p>
                     </div>
->>>>>>> a2d4068e4142111716d5dc44529952aa81527413
                 </div>
                 <div class="col px-0 mb-4">
                     <div class="float-end">
@@ -35,7 +32,7 @@
                 <div class="col"></div>
                 <div class="col config">
                     <div class="text-center time-margin">
-                        <p class="d-flex relogio mb-0">12:30:30</p>
+                        <p class="d-flex relogio mb-0" id="current-time">12:30:30</p>
                     </div>
                     <div>
                         <p class="px-3 margin-negative font-size4">Fri, Jun 17th, 2022</p>
@@ -72,6 +69,22 @@
             </div>
         </div>
     </div>
+    <script>
+        function fetchCurrentTime() {
+            fetch('/horaCerta')
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('current-time').textContent = data.horaCerta;
+                })
+                .catch(error => console.error('Erro ao buscar a hora atual:', error));
+        }
+        
+        // Atualizar a hora a cada segundo
+        setInterval(fetchCurrentTime, 1000);
+        
+        // Chamar a função ao carregar a página
+        window.onload = fetchCurrentTime;
+        </script>
 </body>
-</script>
+
 </html>
