--- a/src/view/html/alarmTela2.html
+++ b/src/view/html/alarmTela2.html
@@ -11,10 +11,11 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
-<body>
+<body id="configForm">
     <div class="container-fluid h-100 background">
         <div class="container custom-container pt-4 px-0">
             <div class="row">
+               
                 <p class="fs-1">Config</p>
             </div>
         </div>
@@ -85,12 +86,15 @@
             <div class="row">
                 <div class="col d-flex justify-content-end mt-5">
                     <div class="pe-2 mt-5">
-                        <img src="../assts/time_icon_sm.png" alt="Config" width="100%">
+                        <a href="/"> 
+                           <img src="../assts/time_icon_sm.png" alt="Config" width="100%">
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    
 </body>
 
 </html>
