--- a/src/view/html/alarmTela1.html
+++ b/src/view/html/alarmTela1.html
@@ -62,7 +62,9 @@
             <div class="row">
                 <div class="col d-flex justify-content-end">
                     <div class="float-end pe-2 config-margin">
+                        <a href="/configPage"> 
                         <img src="../assts/configurações.png" alt="Config" height="150%">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -108,6 +110,7 @@
                         console.log(data)
                     })
                     .catch(error => console.error('Erro ao buscar a data atual:', error));
+
             // Se mudou para um novo dia, busca a data formatada e atualiza a tela
             if (diaHoje !== diaAtual) {
                 fetch('/hoje')
@@ -131,13 +134,13 @@
                     .catch(error => console.error('Erro ao buscar a mensagem:', error));
         }
 
-
         // Função que será chamada quando a página carregar
         function onLoad() {
             fetchCurrentTime(); // Chama a função de buscar a hora atual
             getClima(); // Chama a função de buscar o clima
             fetchDate(); // Chama a função para atualizar a data inicialmente
             fetchMensagem(); // Chama a função para buscar a mensagem inicialmente
+          
 
         }
         // Atualiza a hora a cada segundo
