:bug:fix:14.000:solucionado o problema referente ao mapeamento das pastas

--- a/src/view/html/alarmTela1.html
+++ b/src/view/html/alarmTela1.html
@@ -45,7 +45,7 @@
                         <p  id="mensagem" class="mensagem m-0 font-size3"></p>
                     </div>
                     <div>
-                        <p class="font-size3">.</p>
+                        <p class="font-size3"></p>
                     </div>
                 </div>
             </div>
