✨feat: feito endpoints clima, mensagem, data para esta mostrando ao usuario

--- a/src/view/html/alarmTela1.html
+++ b/src/view/html/alarmTela1.html
@@ -51,12 +51,12 @@
             </div>
             <div class="row mb-3">
                 <div class="col d-flex justify-content-center">
-                    <button type="button" class="button">Desligar o alarme.</button>
+                    <button type="button" class="button" id="idBuscarTelaAlarmes">Set alarm..</button>
                 </div>
             </div>
             <div class="row mb-5">
                 <div class="col d-flex justify-content-center">
-                    <button type="button" class="button2">Adiar o alarme.</button>
+                    <button type="button" class="button2" id="adiarAlarme">Adiar o alarme.</button>
                 </div>
             </div>
             <div class="row">
