--- a/src/view/html/alarmTela2.html
+++ b/src/view/html/alarmTela2.html
@@ -40,7 +40,7 @@
             <div class="card1 mb-3">
                 <div class="row">
                     <div class="col">
-                        <p class="fs-1 my-0">Temperature</p>
+                        <p id="convertedTempDisplay" class="fs-1 my-0">Temperature: </p>
                     </div>
                 </div>
                 <div class="row mb-4">
@@ -96,7 +96,5 @@
         </div>
     </div>
     <div id="statusMessage"></div>
-    
 </body>
-
 </html>
