:bug: fix: Tinha um . a mais no html, que fazia o botão não funcionar

--- a/src/view/html/alarmTela1.html
+++ b/src/view/html/alarmTela1.html
@@ -51,7 +51,7 @@
             </div>
             <div class="row mb-3">
                 <div class="col d-flex justify-content-center">
-                    <button type="button" class="button" id="idBuscarTelaAlarmes">Set alarm..</button>
+                    <button type="button" class="button" id="idBuscarTelaAlarmes">Set alarm.</button>
                 </div>
             </div>
             <div class="row mb-5">
