--- a/src/view/html/alarmTela3.html
+++ b/src/view/html/alarmTela3.html
@@ -72,7 +72,9 @@
             </div>
         </div>
         <div>
-            <img src="../assts/time_icon_sm.png" alt="Config" width="100px" height="100px" class="relogio">
+            <a href="/">
+                <img src="../assts/time_icon_sm.png" alt="Config" width="100px" height="100px" class="relogio">
+            </a>
         </div>
 
     </div>
