--- a/src/view/html/alarmTela4.html
+++ b/src/view/html/alarmTela4.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <script src="../js/tela4.js" defer></script>
     <div class="container-fluid h-100 background">
         <div class="container custom-container pt-4 px-0">
             <div class="row">
@@ -68,9 +69,12 @@
             </div>
         </div>
         <div>
-            <img src="../assts/time_icon_sm.png" alt="Config" width="100px" height="100px" class="relogio">
+            <a href="/">
+                <img src="../assts/time_icon_sm.png" alt="Config" width="100px" height="100px" class="relogio">
+            </a>
         </div>
     </div>
+   
 </body>
 
 </html>
