--- a/src/view/html/alarmTela1.html
+++ b/src/view/html/alarmTela1.html
@@ -12,14 +12,12 @@
 </head>
 
 <body>
-    <script src="../js/tela1.js" defer></script>
     <div class="container-fluid h-100 background">
+        <script src="../js/tela1.js" defer></script>
         <div class="container custom-container pt-4 px-0">
             <div class="row">
                 <div class="col">
-                    <p class="m-0 min-temp"></p>
-                    <p class="m-0 max-temp"></p>
-                    <p class="m-0 current-temp"></p>
+                    <p class="m-0 current-temp colorFonte"></p>
                 </div>
                 <div class="col px-0 mb-4">
                     <div class="float-end">
@@ -31,10 +29,10 @@
                 <div class="col"></div>
                 <div class="col config">
                     <div class="text-center time-margin">
-                        <p class="d-flex relogio mb-0" id="current-time">12:30:30</p>
+                        <p class="d-flex relogio mb-0 colorFonte" id="current-time">12:30:30</p>
                     </div>
                     <div>
-                        <p id="data-atual" class=" px-3 margin-negative font-size4"></p>
+                        <p id="data-atual" class=" px-3 margin-negative font-size4 colorFonte"></p>
                     </div>
                 </div>
                 <div class="col"></div>
@@ -42,10 +40,10 @@
             <div class="row">
                 <div class="text-center font-size">
                     <div class="text-margin">
-                        <p  id="mensagem" class="mensagem m-0 font-size3"></p>
+                        <p  id="mensagem" class="mensagem m-0 font-size3 colorFonte"></p>
                     </div>
                     <div>
-                        <p class="font-size3"></p>
+                        <p class="font-size3 colorFonte"></p>
                     </div>
                 </div>
             </div>
